2006-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-fb.el: Bind w3m-delete-buffer, w3m-fb-frame-parameter,
	w3m-list-buffers, w3m-next-buffer, and w3m-pop-up-frames when
	compiling.

	* shimbun/sb-mainichi.el (shimbun-mainichi-group-table): Add
	eye.kaisetsu, eye.mieru, eye.newsup, and today groups; remove
	eye.tenbou, shakai.edu.net.archive, and shakai.edu.manabito.archive
	groups; increase max-lisp-eval-depth and max-specpdl-size when
	compiling this variable using Emacs 21.

2006-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-gendai-net.el (shimbun-gendai-net-get-headers-default):
	Check all headers in at least the first index page anyway.
	(shimbun-make-contents): Don't use fetched contents if it seems to
	have failed.

2006-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fix regexp matching
	backnumber urls.

2006-09-16  David Hansen  <david.hansen@physik.fu-berlin.de>

	* w3m.el (w3m-relationship-estimate-rules): Changed freshmeat URL
	regexp.

2006-09-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-it-default):
	Don't fetch all backnumbers every time.

2006-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-gendai-net.el (shimbun-gendai-net-get-headers-default):
	Return immediately if article that has already been read is found.

2006-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-gendai-net.el (shimbun-get-headers): Support range.
	(shimbun-gendai-net-get-headers-default): Ditto.
	(shimbun-gendai-net-get-headers-today): Ditto; don't re-fetch initial
	page.

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Support range.

2006-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Don't bind M-g key
	because Emacs 22 uses it as a prefix command in global map.  Suggested
	by David Hansen <david.hansen@gmx.net>.

	* shimbun/sb-gendai-net.el: New module.
